# ascon-vs-chacha

./: Cargo.toml  README.md  rust-toolchain.toml
src/: async_spi.rs  bsp.rs  fair_share.rs  lib.rs  rtc_monotonic.rs  ssq.rs  timer_monotonic.rs
