[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
name = "ascon-vs-chacha"
edition = "2021"
version = "0.1.0"
autobins = false

[dependencies]
heapless = "0.7"

critical-section = "1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

rtic = { version = "2.1", features = ["thumbv7-backend"] }

embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52832", "nfc-pins-as-gpio", "time-driver-rtc1", "gpiote", "unstable-pac"] }

chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless", "reduced-round", "rand_core"] }
ascon-aead = { version = "0.4.2", default-features = false, features = ["heapless", "zeroize"] }


[[bin]]
name = "minimal"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
