[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
name = "dwm1001-async"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git", branch = "async-2022" }
defmt = "0.3.1"
defmt-rtt = "0.3.2"
fugit = { version = "0.3.2", features = ["defmt"] }
nrf52832-hal = { git = "https://github.com/korken89/nrf-hal.git", branch = "dma-spim" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#panic-reset = "0.1.1"
rtic-monotonic = "1"
atomic-polyfill = "0.1.8"
embedded-dma = "0.2"
embedded-hal-async = "0.1.0-alpha.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
